--- a/styles/Newsletter.module.css
+++ b/styles/Newsletter.module.css
@@ -40,7 +40,7 @@
 
 .popup {
   display: flex;
-  z-index: 1;
+  z-index: 110;
   position: fixed;
   top: 0;
   left: 0;
